--- a/Task_3_metrices.ipynb
+++ b/Task_3_metrices.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN3fGGq/exoI38bj70dYd3c",
+      "authorship_tag": "ABX9TyNgAvrA/27o5205PNRvYsL/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -62,13 +62,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 78,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "H9DcwBvDUclZ",
-        "outputId": "ac87ea02-2744-46f2-8c4a-2d8cc0187cfc"
+        "outputId": "0f06856a-c1fe-4168-ba12-dafb66868b6e"
       },
       "outputs": [
         {
@@ -121,9 +121,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Z9a7rSx0WqO4",
-        "outputId": "9dcc7651-a514-4f38-b1c9-485a7d870a69"
+        "outputId": "24cb78b3-e3ea-44ff-a982-636839c5860b"
       },
-      "execution_count": 79,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -156,9 +156,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ew-HuKVUXPPX",
-        "outputId": "c7c6e730-ec83-43af-b66a-fbb8f7f43b8a"
+        "outputId": "4865787c-a3f4-4b33-bf9e-6e19d1341ba4"
       },
-      "execution_count": 80,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -203,9 +203,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "k2BijgBzXb0O",
-        "outputId": "bcec40e1-449f-42a3-cc61-af8954ffb2e8"
+        "outputId": "d0bebbbe-c8ac-413a-b374-e03a95997c71"
       },
-      "execution_count": 81,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -241,9 +241,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qjOp3tRgZxvi",
-        "outputId": "ddf12b46-8a62-4ad3-b551-27f04d7b3c97"
+        "outputId": "8cd365ee-79e7-4e2e-96f0-ed40d056c0cb"
       },
-      "execution_count": 82,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -288,9 +288,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "seUmBf0oa9vJ",
-        "outputId": "a237018f-cf2c-47ff-bca7-f8e7c4ed7f02"
+        "outputId": "b18a1000-15a9-4458-ae6d-bc47d555f874"
       },
-      "execution_count": 92,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -320,16 +320,16 @@
       "cell_type": "code",
       "source": [
         "from sklearn.metrics import recall_score\n",
-        "print(\"Recall Score:\", recall_score(y_true, y_pred, average = 'micro'))"
+        "print(\"Recall Score:\", recall_score(y_true, y_pred, average='macro'))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "d5Jk75RFdNXF",
-        "outputId": "d212f99a-0f52-4736-8f69-4d445e08d81d"
+        "outputId": "99d94614-5af9-41d1-9e54-5ac235f2691a"
       },
-      "execution_count": 91,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -358,16 +358,16 @@
         "from sklearn.metrics import f1_score\n",
         "y_true=[0, 1, 2, 2, 0, 1]\n",
         "y_pred=[0, 2, 2, 1, 0, 1]\n",
-        "print(\"F1 Score:\", f1_score(y_true, y_pred, average = 'micro'))"
+        "print(\"F1 Score:\", f1_score(y_true, y_pred, average='weighted'))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "82MReYBgdhc8",
-        "outputId": "8a1e8da2-acec-414e-e6ae-0fb7dd6f8d53"
+        "outputId": "62d09f81-5ab4-446a-a3db-f42ac57a5b46"
       },
-      "execution_count": 93,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
