--- a/linear_reg_california.ipynb
+++ b/linear_reg_california.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMctblj6d3KAtk1gtSZI1pJ",
+      "authorship_tag": "ABX9TyPppgBcne3aXscZ6ygyfBkQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,12 +24,12 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Christina-26/Marvel-tasks-level-1/blob/main/linear_reg_california.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Christina-26/Marvel-tasks-level-2/blob/main/linear_reg_california.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "f_ZIPFt3fnls"
       },
@@ -47,7 +47,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#loading the boston datasets from sklearn.datasets and print it \n",
+        "#loading the boston datasets from sklearn.datasets and print it\n",
         "from sklearn.datasets import fetch_california_housing\n",
         "housing = fetch_california_housing()\n",
         "print(housing)\n"
@@ -59,7 +59,7 @@
         "id": "sqr1E9jkiqAp",
         "outputId": "4acdf1eb-84f4-432f-ba50-af9aa67398b3"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -86,13 +86,16 @@
       "cell_type": "code",
       "source": [
         "#transfer datasets to dataframes\n",
+        "#data= data we want or the independent variable\n",
+        "#target= dependent variable or the price of the house\n",
+        "#feauture names = columns of the house\n",
         "df_x = pd.DataFrame(housing.data, columns = housing.feature_names)\n",
         "df_y = pd.DataFrame(housing.target)"
       ],
       "metadata": {
         "id": "FjenyII8mpKe"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -109,7 +112,7 @@
         "id": "LaiJ4vbAo9QM",
         "outputId": "a944fe5e-53aa-49be-ceb2-4d9a4963404e"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -351,7 +354,7 @@
       "metadata": {
         "id": "hkGl06ZMp9EX"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -364,7 +367,7 @@
       "metadata": {
         "id": "2F-2CgE2qVdP"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -381,7 +384,7 @@
         "id": "0YVAvBFhrLKe",
         "outputId": "47814e4a-243c-4100-ee75-f005e6b1bfa0"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -411,7 +414,7 @@
         "id": "mTTvVwmqrcZr",
         "outputId": "88d5065e-5f52-4364-fa47-ba196d92c3b5"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -428,7 +431,7 @@
       "source": [
         "#print predictions on test data\n",
         "y_pred = reg.predict(x_test)\n",
-        "print(y_pred) "
+        "print(y_pred)"
       ],
       "metadata": {
         "colab": {
@@ -437,7 +440,7 @@
         "id": "LlIFTN_F0s9Q",
         "outputId": "142d6d53-d970-463c-df48-bc8d7718a829"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -467,7 +470,7 @@
         "id": "Xqsk8dFl2XjY",
         "outputId": "3f1f21be-3974-446a-8877-d7b20f00e951"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -504,7 +507,7 @@
         "id": "DQIb4KXw4831",
         "outputId": "6f0daeef-9535-4463-816c-904ce08bb0e7"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -538,7 +541,7 @@
         "id": "-wLrbv1W53EW",
         "outputId": "dda0f06e-4aaa-4956-f1f6-5698841b6396"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
