--- a/linear_reg_california.ipynb
+++ b/linear_reg_california.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPppgBcne3aXscZ6ygyfBkQ",
+      "authorship_tag": "ABX9TyMi1xz7beL3vglk0l7Fe0K5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -405,6 +405,7 @@
       "cell_type": "code",
       "source": [
         "#print the coefficients for each column\n",
+        "# f(x)= mx + b = y where y is the dependent variable then the coefficients would be m here for this linear line\n",
         "print(reg.coef_)"
       ],
       "metadata": {
