--- a/task2_marvel.ipynb
+++ b/task2_marvel.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMycbMHMHLlOYzJbwNe90+W",
+      "authorship_tag": "ABX9TyMLRWzHwTIjYlEU1sqVAVDQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": null,
       "metadata": {
         "id": "8VmV4zqUMO_i"
       },
@@ -43,6 +43,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# line plot - A line plot is a type of chart or graph which displays information as a series of data points\n",
         "x = np.linspace(0,50,100)\n",
         "y = x * np.linspace(100,150,100)\n",
         "\n",
@@ -60,7 +61,7 @@
         "id": "ym8S6wkYNT1I",
         "outputId": "6d327c9a-d5b1-4247-b650-39b86cb9d886"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -87,6 +88,8 @@
     {
       "cell_type": "code",
       "source": [
+        "# creates a 2x2 grid of subplots, plots data in each subplot with different colors, sets titles for each subplot, and adds x-labels and y-labels\n",
+        "\n",
         "fig, axs = plt.subplots(2, 2)\n",
         "axs[0, 0].plot(x, y)\n",
         "axs[0, 0].set_title('Axis [0, 0]')\n",
@@ -111,7 +114,7 @@
         "id": "C1-HP8LrNhLh",
         "outputId": "4622d6bf-9429-4ea8-fa42-c3a943da530e"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -128,6 +131,7 @@
     {
       "cell_type": "code",
       "source": [
+        " #this plot displays two datasets (y1 and y2) as line plots with different colors and provides a legend to label and distinguish between them\n",
         "a = [10,20,30,40,50]\n",
         "y1 = [1, 2, 3, 4, 5]\n",
         "y2 = [1, 4, 9, 16, 25]\n",
@@ -143,7 +147,7 @@
         "id": "Xh4BAkILNp0Z",
         "outputId": "011f4d07-b856-4812-a11a-2a957ef8bd32"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -170,7 +174,7 @@
     {
       "cell_type": "code",
       "source": [
-        "## AREA PLOT\n",
+        "# AREA PLOT The area between axis and line are commonly emphasized with colours\n",
         "x=range(1,6)\n",
         "n=[1,4,6,8,4]\n",
         "# Area plot\n",
@@ -184,7 +188,7 @@
         "id": "ASQPEp-ROJvx",
         "outputId": "67aae4b1-fddc-4564-92f1-5a8b9e796102"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -211,7 +215,9 @@
     {
       "cell_type": "code",
       "source": [
-        "## IRIS DATA SCATTER PLOT\n",
+        "## IRIS DATA SCATTER PLOT It shows the relationship between two variables.\n",
+        "# It displays the value of 2 sets of data on two-dimensions.\n",
+        "#Each dot represents an observation.\n",
         "from sklearn import datasets\n",
         "# Load Iris dataset\n",
         "iris = datasets.load_iris()\n",
@@ -239,7 +245,7 @@
         "id": "SdOZ5ZBgOTIx",
         "outputId": "cc2b0526-46eb-4d80-efa2-6256c7ac3b7a"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -256,7 +262,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#SIMPLE BAR PLOT\n",
+        "#SIMPLE BAR PLOT plot that presents categorical data with rectangular bars\n",
         "plt.bar(x,n,color=\"pink\")\n"
       ],
       "metadata": {
@@ -267,7 +273,7 @@
         "id": "QlR4Utv8PRCR",
         "outputId": "3dba1713-5cd4-46a7-dac0-73b7befe2c91"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -294,7 +300,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# create data\n",
+        "# grouped bar plot\n",
         "x = np.arange(5)\n",
         "y1 = [34, 56, 12, 89, 67]\n",
         "y2 = [12, 56, 78, 45, 90]\n",
@@ -312,7 +318,7 @@
         "id": "lMeUB2cvPZIp",
         "outputId": "191ba349-5e93-4502-eb5e-ceab47b3c950"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -339,6 +345,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#Stacked Bar Plot:it is used to show how a larger category is divided into smaller categories and what the relationship of each part has on the total amount\n",
         "l = [4, 6, 2, 8, 9]\n",
         "plt.bar(x, n,color=\"bisque\")\n",
         "plt.bar(x, m, bottom=n,color=\"lavender\")\n",
@@ -354,7 +361,7 @@
         "id": "Y_mEfPBxQTTS",
         "outputId": "660a4539-97dc-4663-eb7e-ea01fca76b2b"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -371,6 +378,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#Histograms are used to visualize the distribution of a single continuous variable\n",
         "plt.hist(x,color=\"pink\")"
       ],
       "metadata": {
@@ -381,7 +389,7 @@
         "id": "gxyZh641RDGP",
         "outputId": "6bf0bc5c-9da3-46b8-d472-2b2bf612fda9"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -426,7 +434,7 @@
         "id": "fyNICiHYPesA",
         "outputId": "a9391f9e-55e6-433c-b54a-b0709cb7e494"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -453,6 +461,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# circular statistical graphic, which is divided into slices to illustrate numerical proportion\n",
         "animals = ['CATS', 'DOGS', 'RACCOONS',\n",
         "        'PIGS', 'OTTTERS', 'HAMSTER']\n",
         "\n",
@@ -470,7 +479,7 @@
         "id": "bdiv1hDSRRPQ",
         "outputId": "172390f9-dedd-40e0-a80a-90f98641ef31"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -498,7 +507,7 @@
         "id": "fxeP8VrPRfHQ",
         "outputId": "7e711295-5ae7-4cf2-c698-9b38cfc4d6f8"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -526,7 +535,7 @@
         "id": "bz29RSt4Rh9w",
         "outputId": "8cea1737-df75-42d0-f707-4bd2ca77f96a"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -543,6 +552,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#joint plot between two variables, x and n\n",
         "import seaborn as sns\n",
         "sns.jointplot(x=x,y=n,kind=\"scatter\")"
       ],
@@ -554,7 +564,7 @@
         "id": "mlMBX3SLRlMp",
         "outputId": "3323cb0d-4578-4b0c-ee4f-5bd90a2c95b2"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -581,6 +591,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#One variable is represented on the horizontal axis, a second variable is represented on the vertical axis, third variable is represented by a colour gradient shows 3d in 2d\n",
         "X,N=np.meshgrid(x,n)\n",
         "Z = np.sin(np.sqrt(X**2 + N**2))\n",
         "plt.contour(X,N,Z)\n",
@@ -599,7 +610,7 @@
         "id": "1Dtc-wH0RpVp",
         "outputId": "e4c63219-d4ce-478e-e7b2-a597f8809421"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -616,6 +627,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#2-D represented using colours heatmap\n",
         "data=np.random.rand(10,10)\n",
         "plt.imshow(data,cmap=\"autumn\")"
       ],
@@ -627,7 +639,7 @@
         "id": "tSn-v6fTRt0I",
         "outputId": "52adc019-cf05-4d39-cc6c-70e50226cfe8"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -666,7 +678,7 @@
         "id": "xkUI31RzR3ai",
         "outputId": "c6c1a867-1f37-4131-bfd4-8ad7ec5a4729"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -683,11 +695,11 @@
     {
       "cell_type": "code",
       "source": [
-        "# heat map\n",
+        "# heat map  10x10 matrix\n",
         "import numpy as np\n",
         "import seaborn as sn\n",
         "import matplotlib.pyplot as plt\n",
-        "  \n",
+        "\n",
         "# generating 2-D 10x10 matrix of random numbers\n",
         "# from 1 to 100\n",
         "data = np.random.randint(low = 1,\n",
@@ -695,10 +707,11 @@
         "                         size = (10, 10))\n",
         "print(\"The data to be plotted:\\n\")\n",
         "print(data)\n",
-        "  \n",
+        "\n",
         "# plotting the heatmap\n",
+        "#color scale - with different colors representing different values in the data matrix\n",
         "hm = sn.heatmap(data = data)\n",
-        "  \n",
+        "\n",
         "# displaying the plotted heatmap\n",
         "plt.show()"
       ],
@@ -710,7 +723,7 @@
         },
         "outputId": "40313c84-dece-476e-b698-85fd078f1a28"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
