--- a/task2_marvel.ipynb
+++ b/task2_marvel.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMLRWzHwTIjYlEU1sqVAVDQ",
+      "authorship_tag": "ABX9TyM1pQEgGh71L0J8tZJVU1RD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -591,7 +591,8 @@
     {
       "cell_type": "code",
       "source": [
-        "#One variable is represented on the horizontal axis, a second variable is represented on the vertical axis, third variable is represented by a colour gradient shows 3d in 2d\n",
+        "#One variable is represented on the horizontal axis, a second variable is represented on the vertical axis,\n",
+        "#third variable is represented by a colour gradient shows 3d in 2d\n",
         "X,N=np.meshgrid(x,n)\n",
         "Z = np.sin(np.sqrt(X**2 + N**2))\n",
         "plt.contour(X,N,Z)\n",
