--- a/Task_5_KNN.ipynb
+++ b/Task_5_KNN.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM6Y5wF8LYPIx9GBtmYU0xJ",
+      "authorship_tag": "ABX9TyMq2TTI7V6Yz9iVZ2YU0TDn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Christina-26/Marvel-tasks-level-2/blob/main/Task_5_KNN.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Christina-26/Marvel-tasks-level-1/blob/main/Task_5_KNN.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -32,11 +32,7 @@
         "# **K-Nearest Neighbors**\n",
         "The k-Nearest Neighbors algorithm or KNN for short is a very simple technique.\n",
         "\n",
-        "The entire training dataset is stored. When a prediction is required, the k-most similar records to a new record from the training dataset are then located. From these neighbors, a summarized prediction is made.\n",
-        "\n",
-        "Similarity between records can be measured many different ways. A problem or data-specific method can be used. Generally, with tabular data, a good starting point is the Euclidean distance.\n",
-        "\n",
-        "Once the neighbors are discovered, the summary prediction can be made by returning the most common outcome or taking the average. As such, KNN can be used for classification or regression problems."
+        "The entire training dataset is stored. When a prediction is required, the k-most similar records to a new record from the training dataset are then located. From these neighbors, a summarized prediction is made.\n"
       ],
       "metadata": {
         "id": "gjpiBxuIv46E"
@@ -44,7 +40,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -122,7 +118,7 @@
       "metadata": {
         "id": "Ywsz5Q7m5jQf"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -148,7 +144,7 @@
         "id": "6tiLLKar5oMP",
         "outputId": "89d94c22-2987-4b1b-a662-35098723cef4"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -202,7 +198,7 @@
         "id": "-iHEZOEm81X7",
         "outputId": "af776bcc-3fd4-4f35-9da3-7a971a2554fb"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -236,7 +232,8 @@
         "    def fit(self,x_train,y_train):\n",
         "        self.x_train=x_train\n",
         "        self.y_train=y_train\n",
-        "\n",
+        "#predict calculates the Euclidean distance between x_test and all data points in the training set\n",
+        "#predicts their labels by calling _predict for each test data point and returned as a NumPy array\n",
         "    def predict(self,x_test):\n",
         "        predicted_labels=[self._predict(i) for i in x_test]\n",
         "        return np.array(predicted_labels)\n",
@@ -245,12 +242,13 @@
         "        distances = [euclidean(x_test,x_train) for x_train in self.x_train]\n",
         "        k_indices = np.argsort(distances)[:self.k]\n",
         "        k_nearest_labels = [self.y_train[i] for i in k_indices]\n",
-        "\n",
+        "        #finds the most common label among the k nearest neighbors\n",
         "        most_common = Counter(k_nearest_labels).most_common()\n",
         "        return most_common[0][0]\n",
         "iris=datasets.load_iris()\n",
         "x=iris.data\n",
         "y=iris.target\n",
+        "#80 : 20 split train test\n",
         "x_train,x_test,y_train,y_test = train_test_split(x,y,test_size=0.2,random_state=12)\n",
         "knn = KNN(3)\n",
         "knn.fit(x_train,y_train)\n",
@@ -264,7 +262,7 @@
         "id": "Ah1rGpXp-b3y",
         "outputId": "f749deb6-72c1-4bb8-af8a-27ae477bc82c"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
